--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.0'
+	id 'org.springframework.boot' version '2.7.1'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "io.freefair.lombok" version "6.5.0.3"
 }
 
 group = 'bungae.thunder'
@@ -13,8 +14,12 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:2.7.0'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.0'
+	implementation 'org.flywaydb:flyway-core:8.5.12'
+	implementation 'org.flywaydb:flyway-mysql:8.5.12'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.5'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.0'
 }
 
 tasks.named('test') {
