feat: 커밋시에 reformat code 자동으로 실행되도록 변경

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ task installGitLocalHook(type: Copy) {
     fileMode 0775
 }
 
+build.dependsOn installGitLocalHook
+
 /**
  * ref)
  * https://nesoy.github.io/articles/2020-04/Spotless
