wip: naver login
https://codebibimppap.tistory.com/12
https://annajin.tistory.com/101

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
+# Common
+SERVER_IP=
+SERVER_DOMAIN=
+
 # MariaDB
 MARIADB_ROOT_PASSWORD=cakey1234
 MARIADB_DATABASE=cakey
 MARIADB_USER=bungae
 MARIADB_PASSWORD=cakey1234
+
+# Auth
+NAVER_LOGIN_CLIENT_ID=
+NAVER_LOGIN_SECRET=
