--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,12 @@ spotless {
 jib {
     from {
         image = "openjdk:11-jre-slim"
+        platforms {
+            platform {
+                architecture = "arm64"
+                os = "linux"
+            }
+        }
     }
 
     to {
