feat: [jib] add amd64 arch build option

--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,10 @@ jib {
                 architecture = "arm64"
                 os = "linux"
             }
+            platform {
+                architecture = "amd64"
+                os = "linux"
+            }
         }
     }
 
