--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,10 @@ services:
     restart: unless-stopped
     depends_on:
       - mariadb
+  cakey-frontend:
+    image: haakjunlee/cakey-frontend:0.0.1
+    ports:
+      - "3000:3000"
+    environment:
+      NEXT_PUBLIC_SERVER_URL: http://127.0.0.1:3000
+    restart: unless-stopped
