Feature/hakjun/be 66 Docker compose 환경 구성 (#69)
* docs: update README

* chore: update file permissions

* feat: upgrade gradle version

* feat: docker image build with jib, update docker-compose.yml

* fix: add jib config for M1 mac

* feat: docker repository 추가

* feat: [jib] add amd64 arch build option

* docs: update README

* build: add cakey-frontend container for docker compose

--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ plugins {
 	id 'java'
 	id "io.freefair.lombok" version "6.5.1"
 	id "com.diffplug.spotless" version "6.12.0"
+    id 'com.google.cloud.tools.jib' version '3.3.2'
 }
 
 group = 'bungae.thunder'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = '11'
 
 repositories {
@@ -69,5 +70,30 @@ spotless {
 
         trimTrailingWhitespace()
         endWithNewline()
+    }
+}
+
+jib {
+    from {
+        image = "openjdk:11-jre-slim"
+        platforms {
+            platform {
+                architecture = "arm64"
+                os = "linux"
+            }
+            platform {
+                architecture = "amd64"
+                os = "linux"
+            }
+        }
+    }
+
+    to {
+        image = "haakjunlee/cakey-backend"
+        tags = ["0.0.1", "latest"]
+    }
+
+    container {
+        jvmFlags = ["-Xms128m", "-Xmx128m"]
     }
 }
