--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,21 @@ services:
       MARIADB_USER: ${MARIADB_USER}
       MARIADB_PASSWORD: ${MARIADB_PASSWORD}
     restart: unless-stopped
+  cakey-backend:
+    image: haakjunlee/cakey-backend:0.0.1
+    ports:
+      - "8080:8080"
+    environment:
+      spring.datasource.url: jdbc:mariadb://mariadb:3306/${MARIADB_DATABASE}
+      spring.datasource.username: ${MARIADB_USER}
+      spring.datasource.password: ${MARIADB_PASSWORD}
+    restart: unless-stopped
+    depends_on:
+      - mariadb
+  cakey-frontend:
+    image: haakjunlee/cakey-frontend:0.0.1
+    ports:
+      - "3000:3000"
+    environment:
+      NEXT_PUBLIC_SERVER_URL: http://127.0.0.1:3000
+    restart: unless-stopped
