feat: spring security dependencies for naver login

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ MARIADB_ROOT_PASSWORD=cakey1234
 MARIADB_DATABASE=cakey
 MARIADB_USER=bungae
 MARIADB_PASSWORD=cakey1234
+
+# Social Login
+## Naver
+NAVER_CLIENT_ID=
+NAVER_CLIENT_SECRET=
