--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
       hibernate:
         format_sql: true
     show-sql: true
+    open-in-view: false
   security:
     oauth2:
       client:
